--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -47,6 +47,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W1:
+    name: W1
+    description: Really solid info
+    author: brent.west@gmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-04 06:32:28'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
@@ -81,5 +92,13 @@ pipelines:
       outputs: []
     dependencies: {}
 datasets: {}
-jobs: {}
+jobs:
+  jobs/Niki_CrooksHy_PriceMs__January_Baumbach:
+    name: Niki_CrooksHy_PriceMs__January_Baumbach
+    description: Really solid info
+    scheduler:
+      Nil: {}
+    schedulerJobUID: null
+    createdAt: '2022-04-04 06:32:29'
+    author: brent.west@gmail.com
 libraries: []
