--- a/code/scala/pbt_project.yml
+++ b/code/scala/pbt_project.yml
@@ -58,6 +58,17 @@ pipelines:
       inputs: []
       outputs: []
     dependencies: {}
+  pipelines/W2:
+    name: W2
+    description: Really solid info
+    author: brent.west@gmail.com
+    mode: batch
+    language: scala
+    createdAt: '2022-04-04 06:32:39'
+    datasets:
+      inputs: []
+      outputs: []
+    dependencies: {}
   workflows/Mary_Rath_MD:
     name: Mary_Rath_MD
     description: ''
